Fixed footer position & added Carousel
Footer will now be pushed to the bottom of the page and not cover up
content. Added a carousel to the page. However, the glyphicons do not
work with (my) firefox, I’m not sure about others. but they work with
google chrome and safari so that’s something we need to figure out

--- a/src/css/template.css
+++ b/src/css/template.css
@@ -4,6 +4,7 @@
 	padding: 0px;
 	margin: 0px auto;
 }
+
 .navbar{
 	height: 140px;
 }
@@ -18,30 +19,26 @@ iframe[seamless]{
 }
 
 /* Sticky footer styles*/
-html,
-body {
-	margin:0;
-	padding:0;
-	height:100%;
-}
-#wrapper {
-	min-height:100%;
-	position:relative;
-}
 
-#content {
-	padding:10px;
-	padding-bottom:80px;   /* Height of the footer element */
-}
 #footer {
-	width:100%;
-	height:80px;
-	position:absolute;
-	bottom:0;
-	left:0;
 	background:#F0F0F0;
 	text-align: center;
+	
 }
+
+html, body {
+height: 100%;
+}
+.wrapper {
+min-height: 100%;
+height: auto !important;
+height: 100%;
+margin: 0 auto -4em;
+}
+.footer, .push {
+height: 4em;
+}
+
 @media(min-width: 775px){
   .navbar-toggle{
     display: none;
@@ -57,6 +54,33 @@ body {
     left: auto;
   }
 }
+
+/* CUSTOMIZE THE CAROUSEL
+-------------------------------------------------- */
+
+/* Carousel base class */
+.carousel {
+  height: 350px;
+  margin-bottom: 60px;
+}
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  z-index: 10;
+}
+
+/* Declare heights because of positioning of img element */
+.carousel .item {
+  height: 350px;
+  background-color: #777;
+}
+.carousel-inner > .item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 500px;
+}
+
 
 /* Media Queries for text in navbar*/
 
